Fix squashed users lists
Regressed in 9b1cd84f96b1e27b1bd6bac5771480ec9a9a733f cc: @andyra

--- a/app/assets/stylesheets/separators.css
+++ b/app/assets/stylesheets/separators.css
@@ -14,6 +14,5 @@
     border-block-start: var(--border-size, 1px) var(--border-style, solid) var(--border-color, currentColor);
     border-inline: 0;
     display: flex;
-    inline-size: 100%;
   }
 }
